validacioen en register y login

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,4 +7,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  /* ----------FUENTES PERSONALIZADAS -----------*/
+  --font-boutique: var(--font-dancing);
+  --font-elegant: var(--font-vibes);
 }
